<resources>
    <string name="app_name">Nearby Places</string>
    <string name="map_view">Map</string>
    <string name="list_view">List</string>
    <string name="route_view">Route</string>
    <string name="filter">Filter</string>

    <!-- Toast and dialog message -->
    <string name="no_places_found">No places found, try zooming out or checking the filter settings</string>
    <string name="filter_dialog">Filter Places</string>

    <!-- Connectivity warnings -->
    <string name="internet_connectivity">Internet connectivity is required for this application</string>
    <string name="wireless_problem">Wireless Connectivity Problem</string>

    <string name="location_enabled">Location tracking must be enabled for this application</string>
    <string name="location_problem">Location Service Problem</string>
    <string name="google_location_connection_problem">There is a problem obtaining a location</string>
    <string name="locatin_permission">Location permission request was denied.</string>
    <string name="location_tracking_off">Location tracking is required for this app.  Do you want modify the location options?</string>
    <string name="wireless_off">An internet connection is needed for this app. Do you want to modify the wireless settings?</string>
    <string name="m">m</string>
    <string name="latlong">"Latitude/longitude from Google Location Services "</string>
    <string name="location_connection_lost">Location connection lost, trying to re-connect</string>
    <string name="google_location_problem">"Google location service problem: "</string>
    <string name="place_detail">PLACE_DETAIL</string>
    <string name="address">address</string>
    <string name="n">N</string>
    <string name="dummy_address">address</string>
    <string name="title">title</string>
    <string name="some_long_place_name">Some long, long, long, long, long, long place name</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="map_fragment">map fragment</string>
    <string name="route_fragment">route fragment</string>
    <string name="by_foot">By Foot</string>
    <string name="by_car">By Car</string>
    <string name="no_drawable_found">No drawable found for</string>
    <string name="meter_format">%.1f meters</string>
    <string name="choose_mode">Choose Your Travel Mode</string>
    <string name="no_route">Cannot find the Route</string>
    <string name="sorry_no_route">We\'re sorry, we couldn\'t find the route. Please make sure the Start and Destination are different or are connected by a road</string>
    <string name="dialog_fragment">dialog_fragment</string>
    <string name="route">Route</string>
    <string name="travel_mode">Travel Mode</string>
    <string name="travel_mode_fragment">travel_mode_fragment</string>
    <string name="route_detail">Route Detail</string>
    <string name="place_detail">PLACE_DETAIL</string>
    <string name="minx">MIN_X</string>
    <string name="miny">MIN_Y</string>
    <string name="maxx">MAX_X</string>
    <string name="maxy">MAX_Y</string>
    <string name="sr">SR</string>
    <string name="loading_map">Loading map</string>
    <string name="search_for_places">Search for places?</string>
    <string name="search_caps">SEARCH</string>
    <string name="list_fragment">list fragment</string>
    <string name="location_required">Location access is required to search for places nearby.</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
