<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.esri.android.nearbyplaces.MainActivity">
    <item android:id="@+id/list_action"
          android:title="@string/list_view"
          android:icon="@drawable/ic_list_white_24px"
          android:orderInCategory="200"
          app:showAsAction="always"/>
    <item android:id="@+id/route_action"
          android:title="@string/route_view"
          android:icon="@drawable/ic_directions_white_24px"
          android:orderInCategory="200"
          android:visible="false"
          app:showAsAction="always"/>
    <item android:id="@+id/filter_in_map"
          android:title="@string/filter"
          android:icon="@drawable/ic_filter_list_white_24px"
          android:orderInCategory="100"
          app:showAsAction="always"/>
    <item
        android:id="@+id/walking_directions"
        android:icon="@drawable/ic_directions_walk_white_24px"
        android:orderInCategory="200"
        android:title="Travel Mode"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/driving_directions"
        android:icon="@drawable/ic_directions_car_white_24px"
        android:orderInCategory="200"
        android:title="Travel Mode"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>