<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:background="@drawable/touch_feedback"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/list_item_padding"
                android:paddingTop="@dimen/list_item_padding">
    <ImageView
            android:id="@+id/placeTypeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" android:layout_alignParentBottom="true"/>

    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/placeTypeIcon"
            android:orientation="vertical"
            android:id="@+id/layoutNameAddress">
        <TextView
                android:id="@+id/placeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
        <TextView
                android:id="@+id/placeAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/dummy_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:layout_below="@+id/placeName"/>

    </android.support.v7.widget.LinearLayoutCompat>
    <LinearLayout android:layout_width="wrap_content"
                  android:orientation="vertical"
                  android:layout_height="wrap_content"
                  android:layout_alignParentEnd="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/placeBearing" android:text="@string/n"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_gravity="end"/>
        <TextView
                android:id="@+id/placeDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/address"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
    </LinearLayout>



</RelativeLayout>